Architecture - Create App components, bases and core services

--- a/projects/app-ui/src/index.html
+++ b/projects/app-ui/src/index.html
@@ -4,7 +4,7 @@
 	lang="en"
 	style="
 		--theme-background: #f0f0f0;
-		--theme-forebackground: #e4e4e4;
+		--theme-foreground: #e4e4e4;
 		--theme-primary-500: #298da5;
 		--theme-primary-0: #fbfdfd;
 		--theme-primary-50: #e6f2f4;
