--- a/projects/app-ui/src/index.html
+++ b/projects/app-ui/src/index.html
@@ -44,6 +44,7 @@
 >
 	<head>
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>AppUi</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -55,7 +56,7 @@
 		<link rel="manifest" href="manifest.webmanifest" />
 		<meta name="theme-color" content="#1976d2" />
 	</head>
-	<body class="mat-typography mat-app-background dark-mode">
+	<body class="mat-typography mat-app-background default-mode">
 		<app-root></app-root>
 		<noscript>Please enable JavaScript to continue using this application.</noscript>
 	</body>
