refactor: restructure and component refactor
- rename app-connection-issue to shell-connection-issue
- rename app-loading-bar to shell-loading-bar
- add isOnline to base component
- rebrand isOnline ui indicator

--- a/projects/app-ui/src/index.html
+++ b/projects/app-ui/src/index.html
@@ -56,7 +56,7 @@
 		<link rel="manifest" href="manifest.webmanifest" />
 		<meta name="theme-color" content="#1976d2" />
 	</head>
-	<body class="mat-typography mat-app-background default-mode">
+	<body class="mat-typography mat-app-background dark-mode">
 		<app-root></app-root>
 		<noscript>Please enable JavaScript to continue using this application.</noscript>
 	</body>
